--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# CONTRIBUTORS
+# This file lists all individuals having contributed content to the repository.
 
-- Korede Faleye <akfaleye@gmail.com>
+ABel Berhanu <abelberhanu6@gmail.com>
