--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-ABel Berhanu <abelberhanu6@gmail.com>
+Boitumelo Rachoshi <bcrachoshi@gmail.com>
